turtleart.star.Star.scala.error
Erreur de compilation :
Star:5: error: ')' expected but '}' found.
                gauche(36}
                         ^